# youtubby

./: Cargo.toml  Justfile  LICENSE  Makefile  README.md  build.rs  build_macos_app.sh  justfile
.github/workflows/: release.yml
assets/: Info.plist  scripts.js  stylesheet.css  youtubby.icns
src/: app.rs  assets.rs  events_handler.rs  key_handler.rs  last_fm.rs  main.rs  menu_handler.rs  platform.rs  player_state.rs  player_state_changed.rs  preferences.rs  state.rs  tray_handler.rs  window_handler.rs  youtubby.rs
src/platform/: linux.rs  macos.rs  windows.rs
src/window_handler/: linux.rs  macos.rs  windows.rs
src/youtubby/: assets.rs  events_handler.rs  key_handler.rs  last_fm.rs  menu_handler.rs  mod.rs  player_state_changed.rs  preferences.rs  tray_handler.rs  window_handler.rs
src/youtubby/window_handler/: linux.rs  macos.rs  windows.rs
