[package]
name = "youtubby"
version = "0.1.0"
edition = "2021"
authors = ["fazibear"]
homepage = "https://youtubby.fazibear.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.43"
tao = "0.30"
tray-icon = "0.17"
muda = "0.14"
global-hotkey = "0.6"
image = "0.25"
serde_json = "1.0.128"
serde = "1.0.210"
directories = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
url = "2.5"
md5 = "0.7"
serde_json_path = "0.6"
form_urlencoded = "1.2"
url_encoded_data = "0.6"
anyhow = "1.0.88"
simple_logger = "5.0.0"
log = "0.4.22"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
shell32-sys = "0.1.2"
