[package]
name = "youtubby"
version = "0.1.0"
edition = "2021"
authors = ["fazibear"]
homepage = "https://youtubby.fazibear.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.47"
tao = "0.31"
tray-icon = "0.19"
muda = "0.15"
global-hotkey = "0.6"
image = "0.25"
serde_json = "1.0"
serde = "1.0"
directories = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
md5 = "0.7"
serde_json_path = "0.7"
form_urlencoded = "1.2"
url_encoded_data = "0.6"
anyhow = "1.0"
simple_logger = "5.0"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
shell32-sys = "0.1"
