[package]
name = "youtubby"
version = "0.1.0"
edition = "2021"
authors = ["fazibear"]
homepage = "https://youtubby.fazibear.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wry = "0.53"
tray-icon = "0.21"
muda = "0.17"
global-hotkey = "0.7"
image = "0.25"
serde_json = "1.0"
serde = "1.0"
directories = "6"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
md5 = "0.8"
serde_json_path = "0.7"
form_urlencoded = "1.2"
url_encoded_data = "0.6"
anyhow = "1.0"
simple_logger = "5.0"
log = "0.4"
winit = { version = "0.30", features = [] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
shell32-sys = "0.1.2"
